--- a/FrontEnd/sphynx-task-organizer/package.json
+++ b/FrontEnd/sphynx-task-organizer/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^6.13.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
+    "aws-amplify": "^6.15.8",
     "axios": "^1.13.2",
     "install": "^0.13.0",
+    "oidc-client-ts": "^3.4.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-oidc-context": "^3.3.0",
     "react-router-dom": "^7.10.1",
     "zustand": "^5.0.9"
   },
