--- a/FrontEnd/sphynx-task-organizer/.env
+++ b/FrontEnd/sphynx-task-organizer/.env
@@ -1,4 +1,4 @@
 VITE_COGNITO_DOMAIN=us-east-1rrws7xxku.auth.us-east-1.amazoncognito.com
 VITE_COGNITO_CLIENT_ID=1mm208612qf0lm90dgurnlapgf
-VITE_COGNITO_REDIRECT_URI=http://localhost:5173/
-VITE_COGNITO_LOGOUT_REDIRECT_URI=http://localhost:5173/logout
+VITE_COGNITO_REDIRECT_URI=https://d3f5c3g2txprn2.cloudfront.net/callback
+VITE_COGNITO_LOGOUT_REDIRECT_URI=https://d3f5c3g2txprn2.cloudfront.net/logout
